--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -5,7 +5,7 @@
  */
 
 body {
-  font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif, 'Kaushan Script';
 }
 
 h1,
